chronicle/src/bootstrap/snapshots/chronicle__bootstrap__test__derive_entity_primary_source.snap
---
source: chronicle/src/bootstrap/mod.rs
expression: "serde_json::to_string_pretty(&v).unwrap()"
---
{
  "@context": {
    "@version": 1.1,
    "actedOnBehalfOf": {
      "@container": "@set",
      "@id": "prov:actedOnBehalfOf",
      "@type": "@id"
    },
    "activity": {
      "@id": "prov:activity",
      "@type": "@id"
    },
    "agent": {
      "@id": "prov:agent",
      "@type": "@id"
    },
    "attachment": {
      "@id": "chronicle:hasAttachment",
      "@type": "@id"
    },
    "chronicle": "http://blockchaintp.com/chronicle/ns#",
    "endTime": {
      "@id": "prov:endedAtTime"
    },
    "entity": {
      "@id": "prov:entity",
      "@type": "@id"
    },
    "hadPrimarySource": {
      "@container": "@set",
      "@id": "prov:hadPrimarySource",
      "@type": "@id"
    },
    "identity": {
      "@id": "chronicle:hasIdentity",
      "@type": "@id"
    },
    "label": {
      "@id": "rdfs:label"
    },
    "namespace": {
      "@id": "chronicle:hasNamespace",
      "@type": "@id"
    },
    "previousAttachments": {
      "@container": "@set",
      "@id": "chronicle:hadAttachment",
      "@type": "@id"
    },
    "previousIdentities": {
      "@container": "@set",
      "@id": "chronicle:hadIdentity",
      "@type": "@id"
    },
    "prov": "http://www.w3.org/ns/prov#",
    "provext": "https://openprovenance.org/ns/provext#",
    "publicKey": {
      "@id": "chronicle:hasPublicKey"
    },
    "rdf": "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
    "rdfs": "http://www.w3.org/2000/01/rdf-schema#",
    "signature": {
      "@id": "chronicle:entitySignature"
    },
    "signedAtTime": {
      "@id": "chronicle:signedAtTime"
    },
    "source": {
      "@id": "chronicle:entityLocator"
    },
    "startTime": {
      "@id": "prov:startedAtTime"
    },
    "used": {
      "@container": "@set",
      "@id": "prov:used",
      "@type": "@id"
    },
    "value": {
      "@id": "chronicle:value",
      "@type": "@json"
    },
    "wasAssociatedWith": {
      "@container": "@set",
      "@id": "prov:wasAssociatedWith",
      "@type": "@id"
    },
    "wasDerivedFrom": {
      "@container": "@set",
      "@id": "prov:wasDerivedFrom",
      "@type": "@id"
    },
    "wasGeneratedBy": {
      "@container": "@set",
      "@id": "prov:wasGeneratedBy",
      "@type": "@id"
    },
    "wasQuotedFrom": {
      "@container": "@set",
      "@id": "prov:wasQuotedFrom",
      "@type": "@id"
    },
    "wasRevisionOf": {
      "@container": "@set",
      "@id": "prov:wasRevisionOf",
      "@type": "@id"
    },
    "xsd": "http://www.w3.org/2001/XMLSchema#"
  },
  "@graph": [
    {
      "@id": "chronicle:entity:testgeneratedentity",
      "@type": "prov:Entity",
      "hadPrimarySource": [
        "chronicle:entity:testusedentity"
      ],
      "label": "testgeneratedentity",
      "namespace": "chronicle:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea",
      "value": {}
    },
    {
      "@id": "chronicle:entity:testusedentity",
      "@type": "prov:Entity",
      "label": "testusedentity",
      "namespace": "chronicle:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea",
      "value": {}
    },
    {
      "@id": "chronicle:ns:testns:5a0ab5b8-eeb7-4812-9fe3-6dd69bd20cea",
      "@type": "chronicle:Namespace",
      "label": "testns"
    }
  ]
}
